Fix outline on dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+*:focus-visible {
+	outline: solid 2px #3b82f6;
+}
+
 @layer components {
 	.nav-button {
 		@apply flex h-11 w-11 items-center justify-center rounded-full transition-colors hover:bg-black hover:bg-opacity-5 dark:hover:bg-white dark:hover:bg-opacity-10;
